@@ -2,6 +2,8 @@
 
 	* Add cmd_memory and other commands from Michel Van den Bergh
 
+	* Remove debug scaffolding
+
 2010-02-27 Simon Waters <simon-gnu@technocool.net>
 	
 	* further Evaluation fixes suggested or insprired by Lars Mathiesen
